--- a/challenges.ipynb
+++ b/challenges.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "cb2e67b2",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
     "    rounded_costs = [int(c) for c in weighted_costs]\n",
     "\n",
     "    while sum(rounded_costs) < cost:\n",
-    "        rres_diffs = []\n",
+    "        max_improve = None\n",
     "        for i, rounded_cost in enumerate(rounded_costs):\n",
     "            if weights[i] > 0:\n",
     "                # Get modified rounded cost\n",
@@ -248,13 +248,12 @@
     "                # Obtain relative rounded error (rre) change\n",
     "                rre = abs(weighted_costs[i] - rounded_cost) / weights[i]\n",
     "                m_rre = abs(weighted_costs[i] - m_rounded_cost) / weights[i]\n",
-    "                rres_diffs.append((i, rre - m_rre))\n",
-    "    \n",
-    "        # Sort\n",
-    "        rres_diffs.sort(key=lambda tup: tup[1], reverse=True)\n",
+    "                diff = rre - m_rre\n",
+    "                if max_improve is None or diff > max_improve[1]:\n",
+    "                    max_improve = (i, diff)\n",
     "\n",
     "        # Modify\n",
-    "        rounded_costs[rres_diffs[0][0]] += 1\n",
+    "        rounded_costs[max_improve[0]] += 1\n",
     "\n",
     "    return rounded_costs"
    ]
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "37a1b95d",
    "metadata": {},
    "outputs": [],
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "8c4399cf",
    "metadata": {},
    "outputs": [
@@ -345,7 +344,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
+   "id": "bf1fcf0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prorated costs: [6, 8, 0, 3, 0]\n",
+      "rre: 0.5000000000000006\n",
+      "All tests succeded!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test data\n",
+    "cost = 17\n",
+    "weights = [2, 3, 0, 1, 0]\n",
+    "\n",
+    "# Calculate result\n",
+    "result = get_distribution(cost, weights)\n",
+    "print('prorated costs:', result)\n",
+    "\n",
+    "# Relative rounding error\n",
+    "weights_sum = fsum(weights)\n",
+    "weighted_costs = [w / weights_sum * cost for w in weights]\n",
+    "print('rre:', rre(weighted_costs, result, weights))\n",
+    "\n",
+    "# Test sum is equal to cost\n",
+    "assert fsum(result) == cost\n",
+    "\n",
+    "# Test 0 weighted values are equal to 0\n",
+    "for i in range(len(weights)):\n",
+    "  if (weights[i] == 0):\n",
+    "    assert result[i] == 0\n",
+    "\n",
+    "print('All tests succeded!!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "64780412",
    "metadata": {},
    "outputs": [
@@ -394,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "84615163",
    "metadata": {},
    "outputs": [
@@ -402,6 +442,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-0.5\n",
+      "2.5\n",
+      "7.5\n",
+      "-0.5\n",
+      "2.5\n",
+      "-10.0\n",
       "prorated costs: [9, 4, 0, 2, 0]\n"
      ]
     }
